[package]
name = "reywen_http"
version = "0.1.16"
edition = "2021"
license = "GPL-3.0-only"
description = "A simple and easy to use HTTPv2 library for Rust (based on tokio/reqwest) "

[dependencies]

# hyper
hyper = { version = "0.14.27", optional = true }
hyper-rustls = { version = "0.24.0", optional = true }
hyper-tls = { version = "0.5.0", optional = true }

# async
tokio = { version = "1.32.0", features = ["macros"] }
async-trait = "0.1.73"

# serde
serde = { default-features = false, optional = true, version = "1.0.188" }
serde_json = { default-features = false, optional = true, version = "1.0.107", features = ["std"] }

# encoding
urlencoding = { default-features = false, optional = true, version = "2.1.3" }

# wasm
wasm-bindgen = { version = "0.2.87", optional = true }



[features]
serde = ["dep:serde", "dep:serde_json"]
encoding = ["dep:urlencoding"]
hyper_engine = ["dep:hyper", "dep:hyper-rustls", "dep:hyper-tls"]
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib"]
