[package]
name = "reywen_http"
version = "0.1.16"
edition = "2021"
license = "GPL-3.0-only"
description = "A simple and easy to use HTTPv2 library for Rust (based on tokio/reqwest)"

[dependencies]

# hyper
hyper = { version = "0.14.27", optional = true }
hyper-rustls = { version = "0.24.0", optional = true }
hyper-tls = { version = "0.5.0", optional = true }

# reqwasm
reqwasm = { version = "0.5.0", optional = true }

# async
tokio = { version = "1.32.0", features = ["macros", "rt"] }
async-trait = { version = "0.1.73", optional = true }

# serde
serde = { default-features = false, optional = true, version = "1.0.188" }
serde_json = { default-features = false, optional = true, version = "1.0.107", features = [
    "std",
] }

# encoding
urlencoding = { default-features = false, optional = true, version = "2.1.3" }

# wasm
wasm-bindgen = { version = "0.2.87", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
    "ReadableStreamDefaultReader",
] }
wasm-bindgen-futures = { version = "0.4.37", optional = true }
js-sys = { version = "0.3.64", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[features]
serde = ["dep:serde", "dep:serde_json"]
encoding = ["dep:urlencoding"]
hyper_engine = ["dep:hyper", "dep:hyper-rustls", "dep:hyper-tls", "async"]
reqwasm_engine = ["wasm", "dep:reqwasm"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
]
async = ["dep:async-trait"]

[lib]
crate-type = ["cdylib"]
